hexo auto upload

--- a/2022-08-08/using-cloudflare/index.html
+++ b/2022-08-08/using-cloudflare/index.html
@@ -210,7 +210,7 @@
     <link itemprop="mainEntityOfPage" href="https://newreport.top/2022-08-08/using-cloudflare/">
 
     <span hidden itemprop="author" itemscope itemtype="http://schema.org/Person">
-      <meta itemprop="image" content="/images/avatar.jpg">
+      <meta itemprop="image" content="/images/haruki-avatar.jpg">
       <meta itemprop="name" content="haruki">
       <meta itemprop="description" content="">
     </span>
@@ -372,7 +372,7 @@
       <div class="site-overview-wrap sidebar-panel">
         <div class="site-author motion-element" itemprop="author" itemscope itemtype="http://schema.org/Person">
     <img class="site-author-image" itemprop="image" alt="haruki"
-      src="/images/avatar.jpg">
+      src="/images/haruki-avatar.jpg">
   <p class="site-author-name" itemprop="name">haruki</p>
   <div class="site-description" itemprop="description"></div>
 </div>
