--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
     <link itemprop="mainEntityOfPage" href="https://newreport.top/2022-08-08/using-cloudflare/">
 
     <span hidden itemprop="author" itemscope itemtype="http://schema.org/Person">
-      <meta itemprop="image" content="/images/avatar.jpg">
+      <meta itemprop="image" content="/images/haruki-avatar.jpg">
       <meta itemprop="name" content="haruki">
       <meta itemprop="description" content="">
     </span>
@@ -286,7 +286,7 @@
     <link itemprop="mainEntityOfPage" href="https://newreport.top/2022-08-06/kubernetes_1_24_inside_binary_install/">
 
     <span hidden itemprop="author" itemscope itemtype="http://schema.org/Person">
-      <meta itemprop="image" content="/images/avatar.jpg">
+      <meta itemprop="image" content="/images/haruki-avatar.jpg">
       <meta itemprop="name" content="haruki">
       <meta itemprop="description" content="">
     </span>
@@ -373,7 +373,7 @@
     <link itemprop="mainEntityOfPage" href="https://newreport.top/2022-08-03/kubernetes_1_24_public_install/">
 
     <span hidden itemprop="author" itemscope itemtype="http://schema.org/Person">
-      <meta itemprop="image" content="/images/avatar.jpg">
+      <meta itemprop="image" content="/images/haruki-avatar.jpg">
       <meta itemprop="name" content="haruki">
       <meta itemprop="description" content="">
     </span>
@@ -470,7 +470,7 @@
     <link itemprop="mainEntityOfPage" href="https://newreport.top/2022-08-02/docker_install_using/">
 
     <span hidden itemprop="author" itemscope itemtype="http://schema.org/Person">
-      <meta itemprop="image" content="/images/avatar.jpg">
+      <meta itemprop="image" content="/images/haruki-avatar.jpg">
       <meta itemprop="name" content="haruki">
       <meta itemprop="description" content="">
     </span>
@@ -561,7 +561,7 @@
     <link itemprop="mainEntityOfPage" href="https://newreport.top/2022-08-02/podman_install_using/">
 
     <span hidden itemprop="author" itemscope itemtype="http://schema.org/Person">
-      <meta itemprop="image" content="/images/avatar.jpg">
+      <meta itemprop="image" content="/images/haruki-avatar.jpg">
       <meta itemprop="name" content="haruki">
       <meta itemprop="description" content="">
     </span>
@@ -655,7 +655,7 @@
     <link itemprop="mainEntityOfPage" href="https://newreport.top/2022-07-27/kubernetes_1_24_inside_install/">
 
     <span hidden itemprop="author" itemscope itemtype="http://schema.org/Person">
-      <meta itemprop="image" content="/images/avatar.jpg">
+      <meta itemprop="image" content="/images/haruki-avatar.jpg">
       <meta itemprop="name" content="haruki">
       <meta itemprop="description" content="">
     </span>
@@ -752,7 +752,7 @@
     <link itemprop="mainEntityOfPage" href="https://newreport.top/2022-07-03/undefined/">
 
     <span hidden itemprop="author" itemscope itemtype="http://schema.org/Person">
-      <meta itemprop="image" content="/images/avatar.jpg">
+      <meta itemprop="image" content="/images/haruki-avatar.jpg">
       <meta itemprop="name" content="haruki">
       <meta itemprop="description" content="">
     </span>
@@ -830,7 +830,7 @@
     <link itemprop="mainEntityOfPage" href="https://newreport.top/2021-06-28/cloud-fullall/">
 
     <span hidden itemprop="author" itemscope itemtype="http://schema.org/Person">
-      <meta itemprop="image" content="/images/avatar.jpg">
+      <meta itemprop="image" content="/images/haruki-avatar.jpg">
       <meta itemprop="name" content="haruki">
       <meta itemprop="description" content="">
     </span>
@@ -918,7 +918,7 @@
     <link itemprop="mainEntityOfPage" href="https://newreport.top/2021-06-23/English-1/">
 
     <span hidden itemprop="author" itemscope itemtype="http://schema.org/Person">
-      <meta itemprop="image" content="/images/avatar.jpg">
+      <meta itemprop="image" content="/images/haruki-avatar.jpg">
       <meta itemprop="name" content="haruki">
       <meta itemprop="description" content="">
     </span>
@@ -1003,7 +1003,7 @@
     <link itemprop="mainEntityOfPage" href="https://newreport.top/2021-06-23/English-part-of-speech/">
 
     <span hidden itemprop="author" itemscope itemtype="http://schema.org/Person">
-      <meta itemprop="image" content="/images/avatar.jpg">
+      <meta itemprop="image" content="/images/haruki-avatar.jpg">
       <meta itemprop="name" content="haruki">
       <meta itemprop="description" content="">
     </span>
@@ -1147,7 +1147,7 @@
       <div class="site-overview-wrap sidebar-panel">
         <div class="site-author motion-element" itemprop="author" itemscope itemtype="http://schema.org/Person">
     <img class="site-author-image" itemprop="image" alt="haruki"
-      src="/images/avatar.jpg">
+      src="/images/haruki-avatar.jpg">
   <p class="site-author-name" itemprop="name">haruki</p>
   <div class="site-description" itemprop="description"></div>
 </div>
