--- a/2021-01-05/Csharp-base/index.html
+++ b/2021-01-05/Csharp-base/index.html
@@ -210,7 +210,7 @@
     <link itemprop="mainEntityOfPage" href="https://newreport.top/2021-01-05/Csharp-base/">
 
     <span hidden itemprop="author" itemscope itemtype="http://schema.org/Person">
-      <meta itemprop="image" content="/images/avatar.jpg">
+      <meta itemprop="image" content="/images/haruki-avatar.jpg">
       <meta itemprop="name" content="haruki">
       <meta itemprop="description" content="">
     </span>
@@ -391,7 +391,7 @@ A[.NET平台] -->F(...语言)</pre>
       <div class="site-overview-wrap sidebar-panel">
         <div class="site-author motion-element" itemprop="author" itemscope itemtype="http://schema.org/Person">
     <img class="site-author-image" itemprop="image" alt="haruki"
-      src="/images/avatar.jpg">
+      src="/images/haruki-avatar.jpg">
   <p class="site-author-name" itemprop="name">haruki</p>
   <div class="site-description" itemprop="description"></div>
 </div>
