hexo auto upload

--- a/2021-06-21/variables-and-simple-data-types/index.html
+++ b/2021-06-21/variables-and-simple-data-types/index.html
@@ -501,10 +501,10 @@
 
 <script>
 var options = {
-  bottom: 'unset',
-  right: '64px',
-  left: '32px',
-  time: '0.5s',
+  bottom: '32px',
+  right: '32px',
+  left: 'unset',
+  time: '0.3s',
   mixColor: 'transparent',
   backgroundColor: 'transparent',
   buttonColorDark: '#100f2c',
