--- a/2021-01-04/c-sharp-base/index.html
+++ b/2021-01-04/c-sharp-base/index.html
@@ -429,10 +429,10 @@ A[.NET平台] -->F(...语言)</pre>
 
 <script>
 var options = {
-  bottom: 'unset',
-  right: '64px',
-  left: '32px',
-  time: '0.5s',
+  bottom: '32px',
+  right: '32px',
+  left: 'unset',
+  time: '0.3s',
   mixColor: 'transparent',
   backgroundColor: 'transparent',
   buttonColorDark: '#100f2c',
